add mail config env
add mail config env entries to allow user self registration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ AUTH_USER_REGISTRATION=False
 RECAPTCHA_USE_SSL=False
 RECAPTCHA_PUBLIC_KEY='public key'
 RECAPTCHA_PRIVATE_KEY='private key'
+MAIL_SERVER = 'smtp.gmail.com'
+MAIL_USE_TLS = True
+MAIL_USERNAME = 'username@gmail.com'
+MAIL_PASSWORD = 'emailkey'
+MAIL_DEFAULT_SENDER = 'system@gmail.com'
